[project]
name = "google-cloud-storage-mock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.1",
]

[tool.pytest]
# addopts = ["-svrA"]
addopts = ["-s"]
log_cli = true
log_level = "DEBUG"
# ; markers =
# ;     smoke:      Smoke Test
# ;     regression: Regression Test
# ;     sanity
# ;     integration:

# ; addopts = -rA -v --html=AutomatonPytestReport.html
# ; addopts = -sv
# ; -s capture=no
# ; -v verbose
# ; -r extra summary A=ALl

# ; fixes collect error with same file names in different folders
# ; addopts = "--import-mode=importlib"

# ; addopts = -vvrA --import-mode=importlib
# ; addopts = -svvrA --import-mode=importlib
# addopts = -vvrA

# ; log_cli = 1
# ; log_cli_level = INFO
# ; log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
# ; log_cli_date_format=%Y-%m-%d %H:%M:%S

# ; python_files = part*.py test_*.py functions.py
# ; python_functions = test_solution_* test_*

# ; norecursedirs = experiments
# ; testpaths = 'y2015/d22' tests
# pythonpath = ${PWD}
